feat(chain): add all chain ids
