# src/id/api/swagger.json
@@ -2055,7 +2055,11 @@
       "ChainId": {
         "type": "string",
         "enum": [
+          "1",
+          "3",
           "4",
+          "42",
+          "1337",
           "80001",
           "137"
         ]
